@@ -6,9 +6,9 @@ import java.util.TreeSet;
 public class TreeSetExample2 {
 	public static void main(String[] args) {
 		TreeSet<Integer> scores = new TreeSet<Integer>();
-		scores.add(new Integer(87));
-		scores.add(new Integer(98));
-		scores.add(new Integer(75));
+		scores.add(Integer.valueOf(87));
+		scores.add(98);
+		scores.add(75);
 		scores.add(new Integer(95));
 		scores.add(new Integer(80));
 		
